date strip added, UI fixed for 125%, contrast added in drop down, date picker removed, refresh retained

--- a/common-ms/flashex-webapp/flashex-webapp/src/app/trip-management/components/order-details/order-details.component.css
+++ b/common-ms/flashex-webapp/flashex-webapp/src/app/trip-management/components/order-details/order-details.component.css
@@ -27,6 +27,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 .example-element-detail {
   overflow: hidden;
   display: flex;
+  background-color: #EFEFEF;
   /* height: 25em; */
 }
 .example-element-diagram {
@@ -35,7 +36,7 @@ tr.example-element-row:not(.example-expanded-row):active {
   /* background: powderblue; */
   /* border: 2px so
 lid black; */
-  padding: 10px;
+  /* padding: 10px; */
   font-weight: lighter;
 }
 .example-element-symbol {
